NetBSD Problem Report #49708
From martin@duskware.de Sun Mar 1 08:08:55 2015
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (not verified))
by mollari.NetBSD.org (Postfix) with ESMTPS id 2B734A567D
for <gnats-bugs@gnats.NetBSD.org>; Sun, 1 Mar 2015 08:08:55 +0000 (UTC)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: makemandb crashes on hppa
X-Send-Pr-Version: 3.95
>Number: 49708
>Category: port-hppa
>Synopsis: makemandb crashes on hppa
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: port-hppa-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun Mar 01 08:10:00 +0000 2015
>Closed-Date: Wed Mar 11 06:27:29 +0000 2015
>Last-Modified: Wed Mar 11 06:27:29 +0000 2015
>Originator: Martin Husemann
>Release: NetBSD 7.99.5
>Organization:
The NetBSD Foundation, Inc
>Environment:
System: NetBSD moondance.duskware.de 7.99.5 NetBSD 7.99.5 (MOONDANCE) #0: Wed Feb 25 15:54:58 CET 2015 martin@seven-days-to-the-wolves.aprisoft.de:/usr/src/sys/arch/hppa/compile/MOONDANCE hppa
Architecture: hppa
Machine: hppa
>Description:
Core was generated by `makemandb'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0 0x0002b600 in __canonicalize_funcptr_for_compare ()
(gdb) bt
#0 0x0002b600 in __canonicalize_funcptr_for_compare ()
#1 0x000133f4 in pmdoc_Sh (n=<optimized out>, rec=rec@entry=0xb0002288)
at /usr/src/usr.sbin/makemandb/makemandb.c:1113
#2 0x000133cc in pmdoc_Sh (n=<optimized out>, rec=rec@entry=0xb0002288)
at /usr/src/usr.sbin/makemandb/makemandb.c:1135
#3 0x000133cc in pmdoc_Sh (n=<optimized out>, rec=rec@entry=0xb0002288)
at /usr/src/usr.sbin/makemandb/makemandb.c:1135
#4 0x000133cc in pmdoc_Sh (n=<optimized out>, rec=0xb0002288)
at /usr/src/usr.sbin/makemandb/makemandb.c:1135
#5 0x00012668 in pmdoc_node (n=<optimized out>, rec=rec@entry=0xb0002288)
at /usr/src/usr.sbin/makemandb/makemandb.c:942
#6 0x00012674 in pmdoc_node (n=<optimized out>, rec=rec@entry=0xb0002288)
at /usr/src/usr.sbin/makemandb/makemandb.c:948
#7 0x00012674 in pmdoc_node (n=<optimized out>, rec=rec@entry=0xb0002288)
at /usr/src/usr.sbin/makemandb/makemandb.c:948
#8 0x0002c91c in begin_parse (len=7837, buf=0xaeed8000, rec=0xb0002288,
mp=0xaf414040, file=0xaf2429d0 "/usr/share/man/man7/mandoc_tbl.7")
at /usr/src/usr.sbin/makemandb/makemandb.c:889
#9 update_db (rec=0xb0002288, mp=0xaf414040, db=0xaf40e008)
at /usr/src/usr.sbin/makemandb/makemandb.c:810
#10 main (argc=<optimized out>, argv=<optimized out>)
at /usr/src/usr.sbin/makemandb/makemandb.c:434
>How-To-Repeat:
Haven't tried yet, the weekly run triggered it on my system.
>Fix:
n/a
>Release-Note:
>Audit-Trail:
From: "Joerg Sonnenberger" <joerg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/49708 CVS commit: src/usr.sbin/makemandb
Date: Mon, 2 Mar 2015 13:51:24 +0000
Module Name: src
Committed By: joerg
Date: Mon Mar 2 13:51:24 UTC 2015
Modified Files:
src/usr.sbin/makemandb: makemandb.c
Log Message:
Explicitly deal with end of lists. PR 49708.
To generate a diff of this commit:
cvs rdiff -u -r1.25 -r1.26 src/usr.sbin/makemandb/makemandb.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->feedback
State-Changed-By: snj@NetBSD.org
State-Changed-When: Wed, 11 Mar 2015 02:49:08 +0000
State-Changed-Why:
Fixed, yeah?
State-Changed-From-To: feedback->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Wed, 11 Mar 2015 06:27:29 +0000
State-Changed-Why:
Fixed.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.