Explicitly deal with end of lists. PR 49708.